--- a/2.test_analysis.ipynb
+++ b/2.test_analysis.ipynb
@@ -751,8 +751,8 @@
     "all_new_rows = []\n",
     "\n",
     "for dataset_name in DATASETS:\n",
-    "    # \"mfcc\", \"custom\", \"none\"\n",
-    "    for spectral_representation in [\"none\"]:\n",
+    "    # \"mfcc\", \"stft\", \"custom\", \"none\"\n",
+    "    for spectral_representation in [\"mfcc\"]:\n",
     "            print(f\"\\n===== DATASET: {dataset_name} =====\")\n",
     "        \n",
     "            # load_data signature expected to return pretrain/train/test splits for evaluation\n",
@@ -842,132 +842,6 @@
     "    print(f\"Results saved to {outfile}.\")\n",
     "else:\n",
     "    print(\"No new studies found; nothing to append.\")\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ab0d698e-1575-46a7-9309-46ec137aa4ee",
-   "metadata": {},
-   "source": [
-    "### Grouped bar plot"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d44860d7-3673-49d9-bee9-da43f065e8e7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib as mpl\n",
-    "import matplotlib.pyplot as plt\n",
-    "from matplotlib.patches import Patch\n",
-    "\n",
-    "# --------- Matplotlib styling (clean, print-ready) ----------\n",
-    "mpl.rcParams.update({\n",
-    "    \"figure.dpi\": 150,\n",
-    "    \"savefig.dpi\": 600,\n",
-    "    \"font.size\": 12,\n",
-    "    \"axes.titlesize\": 15,\n",
-    "    \"axes.labelsize\": 12,\n",
-    "    \"xtick.labelsize\": 11,\n",
-    "    \"ytick.labelsize\": 11,\n",
-    "    \"axes.linewidth\": 0.8,\n",
-    "    \"pdf.fonttype\": 42,  # embed text as text in PDFs\n",
-    "    \"ps.fonttype\": 42,\n",
-    "})\n",
-    "\n",
-    "# ---- load & clean ----\n",
-    "df = pd.read_csv(outfile)\n",
-    "df.columns = [c.strip() for c in df.columns]\n",
-    "\n",
-    "def numify(s):\n",
-    "    if pd.isna(s):\n",
-    "        return np.nan\n",
-    "    s = str(s).replace(\"%\", \"\").replace(\"±\", \"\").strip()\n",
-    "    return pd.to_numeric(s, errors=\"coerce\")\n",
-    "\n",
-    "df[\"Average Score\"] = df[\"Average Score\"].apply(numify)\n",
-    "df[\"Standard Deviation\"] = df[\"Standard Deviation\"].apply(numify)\n",
-    "\n",
-    "# Apply pretty labels\n",
-    "df[\"Function_disp\"] = df[\"Function\"].map(function_mapping).fillna(df[\"Function\"])\n",
-    "df[\"Dataset_disp\"]  = df[\"Dataset\"].map(dataset_label_map).fillna(df[\"Dataset\"])\n",
-    "\n",
-    "# Normalize mapping labels\n",
-    "if \"Random Input Mapping\" not in df.columns:\n",
-    "    raise ValueError(\"CSV must include 'Random Input Mapping' with values like 'modular'/'random'\")\n",
-    "df[\"Random Input Mapping\"] = df[\"Random Input Mapping\"].astype(str).str.lower().map({\"modular\":\"modular\",\"random\":\"random\"})\n",
-    "\n",
-    "# Keep only functions we know (in case CSV holds others)\n",
-    "present_functions = [f for f in functions_order if f in df[\"Function_disp\"].unique()]\n",
-    "if not present_functions:\n",
-    "    present_functions = sorted(df[\"Function_disp\"].unique())\n",
-    "\n",
-    "mappings = [m for m in [\"modular\",\"random\"] if m in df[\"Random Input Mapping\"].unique()]\n",
-    "\n",
-    "# Consistent dataset order\n",
-    "datasets = [dataset_label_map.get(k, k) for k in [\"JapaneseVowels\",\"CatsDogs\",\"FSDD\"] if k in df[\"Dataset\"].unique()]\n",
-    "# include any extras not in the preferred list\n",
-    "datasets += [dataset_label_map.get(d, d) for d in df[\"Dataset\"].unique() if dataset_label_map.get(d, d) not in datasets]\n",
-    "\n",
-    "# ---- Grouped bar plot: Average Score with error bars ----\n",
-    "x = np.arange(len(datasets))  # dataset positions\n",
-    "width = 0.08                  # narrow bars to fit many\n",
-    "fontsize = 12\n",
-    "fig, ax = plt.subplots(figsize=(max(10, 1.5*len(datasets)+4), 6))\n",
-    "\n",
-    "mapping_hatching = {\"modular\": \"\", \"random\": \"///\"}\n",
-    "\n",
-    "for i, func in enumerate(present_functions):\n",
-    "    for j, mapping in enumerate(mappings):\n",
-    "        offset = i * (len(mappings) * width) + j * width\n",
-    "\n",
-    "        sub = df[(df[\"Function_disp\"] == func) & (df[\"Random Input Mapping\"] == mapping)]\n",
-    "        # align to dataset positions\n",
-    "        merged = pd.DataFrame({\"Dataset_disp\": datasets}).merge(sub, on=\"Dataset_disp\", how=\"left\")\n",
-    "\n",
-    "        color = function_colors.get(func, \"gray\")\n",
-    "        hatch = mapping_hatching.get(mapping, \"\")\n",
-    "\n",
-    "        ax.bar(\n",
-    "            x + offset,\n",
-    "            merged[\"Average Score\"],\n",
-    "            width,\n",
-    "            yerr=merged[\"Standard Deviation\"],\n",
-    "            capsize=3,\n",
-    "            color=color,\n",
-    "            hatch=hatch,\n",
-    "            edgecolor=\"black\",\n",
-    "            label=None\n",
-    "        )\n",
-    "\n",
-    "ax.spines[\"top\"].set_visible(False)\n",
-    "ax.spines[\"right\"].set_visible(False)\n",
-    "ax.tick_params(axis=\"both\", labelsize=fontsize)\n",
-    "ax.set_xlabel(\"Dataset\", fontsize=fontsize)\n",
-    "ax.set_ylabel(\"Average Score\", fontsize=fontsize)  # (%) for classification, raw for regression\n",
-    "\n",
-    "# center ticks under grouped bars\n",
-    "group_width = len(present_functions) * len(mappings) * width\n",
-    "ax.set_xticks(x + group_width/2 - (width/2))\n",
-    "ax.set_xticklabels(datasets, rotation=0)\n",
-    "\n",
-    "# legends\n",
-    "func_legend = [Patch(facecolor=function_colors.get(f,\"gray\"), edgecolor=\"black\", label=f) for f in present_functions]\n",
-    "map_legend = [Patch(facecolor=\"white\", edgecolor=\"black\", hatch=mapping_hatching[m], label=m.title()) for m in mappings]\n",
-    "\n",
-    "first_legend = ax.legend(handles=func_legend, title=\"Function\", loc=\"upper left\", fontsize=fontsize)\n",
-    "ax.add_artist(first_legend)\n",
-    "ax.legend(handles=map_legend, title=\"Input Mapping\", loc=\"lower left\", fontsize=fontsize)\n",
-    "\n",
-    "plt.tight_layout()\n",
-    "png_out = os.path.join(img_dir, \"bar_input_strategy.png\")\n",
-    "pdf_out = os.path.join(img_dir, \"bar_input_strategy.pdf\")\n",
-    "fig.savefig(png_out, bbox_inches=\"tight\")\n",
-    "fig.savefig(pdf_out, bbox_inches=\"tight\")\n",
-    "print(f\"Saved {png_out} and {pdf_out}\")\n",
-    "plt.close(fig)"
    ]
   },
   {
@@ -1119,7 +993,7 @@
     "\n",
     "pdf_out = os.path.join(img_dir, \"heatmap_deltas.pdf\")\n",
     "fig.savefig(pdf_out, bbox_inches=\"tight\")\n",
-    "print(f\"Saved {png_out} and {pdf_out}\")\n",
+    "print(f\"Saved {pdf_out}\")\n",
     "\n",
     "# ---- Textual summary ----\n",
     "by_ds = (wide.groupby(\"Dataset\")[\"delta_pp\"].mean().reindex(dataset_order_raw))\n",
@@ -1154,7 +1028,7 @@
     "for dataset_name in datasets:\n",
     "    (is_instances_classification, is_multivariate, sampling_rate,\n",
     "     X_train_raw, X_test_raw, Y_train_raw, Y_test,\n",
-    "     use_spectral_representation, groups) = load_dataset(dataset_name, 5, visualize=False)\n",
+    "     use_spectral_representation, spectral_representation, groups) = load_dataset(dataset_name, 5, visualize=False)\n",
     "\n",
     "    # Compute the length of each instance (assuming each instance is a 1D sequence)\n",
     "    lengths = [len(x) for x in X_train_raw]\n",
@@ -1506,6 +1380,8 @@
     "ax.legend(handles=sampler_legend, title='Sampler', loc='lower left', fontsize=fontsize)\n",
     "\n",
     "plt.tight_layout()\n",
+    "path = \"outputs/figures/hpo_comparaison.pdf\"\n",
+    "fig.savefig(path, bbox_inches=\"tight\")\n",
     "plt.show()"
    ]
   },
@@ -1545,7 +1421,8 @@
     "for dataset_name in [\"FSDD\"]:\n",
     "    new_results = pd.DataFrame(columns=columns)\n",
     "    # Can be \"MackeyGlass\", \"Lorenz\", \"Sunspot_daily\", \"CatsDogs\", \"JapaneseVowels\", \"FSDD\", \"SpokenArabicDigits\", \"SPEECHCOMMANDS\"\n",
-    "    pretrain_data, train_data, test_data, Y_train, Y_test, is_multivariate, is_instances_classification = load_data(dataset_name, data_type, noise_std, visualize=True)\n",
+    "    spectral_representation = \"mfcc\" if dataset_name in [\"CatsDogs\", \"FSDD\", \"JapaneseVowels\", \"SPEECHCOMMANDS\", \"SpokenArabicDigits\"] else \"stft\"\n",
+    "    pretrain_data, train_data, test_data, Y_train, Y_test, is_multivariate, is_instances_classification = load_data(dataset_name, spectral_representation, data_type, noise_std, visualize=True)\n",
     "    if is_instances_classification:\n",
     "        file_name = \"outputs/test_results/test_results_classification.csv\"\n",
     "    else: \n",
@@ -1752,9 +1629,7 @@
   {
    "cell_type": "markdown",
    "id": "8ae919b11422d98a",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Export best parameters"
    ]
@@ -1926,7 +1801,8 @@
     "new_results = []\n",
     "for dataset in datasets:\n",
     "    print(dataset)\n",
-    "    pretrain_data, train_data, test_data, Y_train, Y_test, is_multivariate, is_instances_classification = load_data(dataset, data_type, noise_std, visualize=False)\n",
+    "    spectral_representation = \"mfcc\" if dataset in [\"CatsDogs\", \"FSDD\", \"JapaneseVowels\", \"SPEECHCOMMANDS\", \"SpokenArabicDigits\"] else \"stft\"\n",
+    "    pretrain_data, train_data, test_data, Y_train, Y_test, is_multivariate, is_instances_classification = load_data(dataset, spectral_representation, data_type, noise_std, visualize=False)\n",
     "    for function_name in [\"random_ee\", \"random_ei\", \"ip_correct\", \"anti-oja_fast\", \"hadsp\", \"desp\"]: # \"random_ee\", \"random_ei\", \"ip_correct\", \"anti-oja_fast\",  \"ip-anti-oja_fast\", \"hadsp\", \"desp\"\n",
     "        # Get the best trial from the study\n",
     "        print(function_name)\n",
@@ -2356,9 +2232,9 @@
     "corr_columns = []\n",
     "for dataset in datasets:\n",
     "    print(dataset)\n",
+    "    spectral_representation = \"mfcc\" if dataset in [\"CatsDogs\", \"FSDD\", \"JapaneseVowels\", \"SPEECHCOMMANDS\", \"SpokenArabicDigits\"] else \"stft\"\n",
     "    pretrain_data, train_data, test_data, Y_train, Y_test, is_multivariate, \\\n",
-    "        is_instances_classification = load_data(dataset, data_type, noise_std, visualize=False)\n",
-    "\n",
+    "        is_instances_classification = load_data(dataset, spectral_representation, data_type, noise_std, visualize=False)\n",
     "    for function_name in [\"random_ee\", \"random_ei\", \"ip_correct\", \"anti-oja_fast\",  \"ip-anti-oja_fast\", \"hadsp\", \"desp\"]: # \"random_ee\", \"random_ei\", \"ip_correct\", \"anti-oja_fast\", \"ip-anti-oja_fast\", \"hadsp\", \"desp\"\n",
     "        print(function_name)\n",
     "\n",
@@ -2828,7 +2704,8 @@
     "# Loop through datasets and function names to compute W matrices and find global vmax\n",
     "for dataset in datasets:\n",
     "    print(dataset)\n",
-    "    pretrain_data, train_data, test_data, Y_train, Y_test, is_multivariate, is_instances_classification = load_data(dataset, data_type, noise_std)\n",
+    "    spectral_representation = \"mfcc\" if dataset in [\"CatsDogs\", \"FSDD\", \"JapaneseVowels\", \"SPEECHCOMMANDS\", \"SpokenArabicDigits\"] else \"stft\"\n",
+    "    pretrain_data, train_data, test_data, Y_train, Y_test, is_multivariate, is_instances_classification = load_data(dataset, spectral_representation, data_type, noise_std)\n",
     "\n",
     "    # \"random_ee\", \"random_ei\", \"ip_correct\", \"anti-oja_fast\", \"ip-anti-oja_fast\",  \"hadsp\", \"desp\", \"diag_ee\", \"diag_ei\"\n",
     "    for function_name in [\"random_ee\", \"random_ei\", \"ip_correct\", \"anti-oja_fast\", \"ip-anti-oja_fast\",  \"hadsp\", \"desp\"]: #\"diag_ee\", \"diag_ei\",\n",
@@ -3123,10 +3000,20 @@
     "data[\"Algorithm\"] = data[\"function_name\"].map(function_mapping)\n",
     "\n",
     "# ---------- marker for every dataset ---------------------\n",
+    "from matplotlib.textpath import TextPath\n",
+    "from matplotlib.font_manager import FontProperties\n",
+    "from matplotlib.markers import MarkerStyle\n",
+    "\n",
+    "raw_text = \"ب\"  # or any single Arabic glyph you like\n",
+    "arabic_fp = FontProperties(family=\"Geeza Pro\")\n",
+    "text_path = TextPath((0, 0), raw_text, prop=arabic_fp, size=1)\n",
+    "arabic_marker = MarkerStyle(text_path)\n",
+    "\n",
+    "\n",
     "dataset_marker = {\n",
-    "    \"CatsDogs\":               r\"$🐱$\",  # ⚠️ If this glyph is missing, swap to an SVG via make_colorable_marker(...)\n",
+    "    \"CatsDogs\":               r\"$🐱$\",\n",
     "    \"Japanese\\nVowels\":       r\"$¥$\",\n",
-    "    \"Spoken\\nArabic\\nDigits\":  make_colorable_marker(\"analysis/icons/arabic.svg\", scale=0.015),\n",
+    "    \"Spoken\\nArabic\\nDigits\": arabic_marker,\n",
     "    \"FSDD\":                   r\"$5$\",\n",
     "    \"SPEECH\\nCOMMANDS\":       make_colorable_marker(\"analysis/icons/microphone.svg\", scale=0.015),\n",
     "}\n",
@@ -3231,10 +3118,9 @@
     "pdf_path = os.path.join(out_dir, \"Fig_scatter_CEVD_vs_Intra.pdf\")   # <-- use this PDF in submission\n",
     "\n",
     "fig.savefig(pdf_path, bbox_inches=\"tight\")      # vector PDF with embedded fonts\n",
-    "fig.savefig(svg_path, bbox_inches=\"tight\")      # optional SVG for editing\n",
     "\n",
     "plt.show()\n",
-    "print(f\"Saved:\\n - {pdf_path}\\n - {svg_path}\")"
+    "print(f\"Saved:\\n - {pdf_path}\\n \")"
    ]
   },
   {
