--- a/1.general_framework.ipynb
+++ b/1.general_framework.ipynb
@@ -38,13 +38,14 @@
     "import numpy as np\n",
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
+    "from matplotlib.ticker import MultipleLocator\n",
     "\n",
     "# Ensure output directory exists\n",
     "os.makedirs(\"outputs/figures\", exist_ok=True)\n",
     "\n",
     "# Configure PDF backend\n",
-    "mpl.rcParams['pdf.fonttype'] = 42\n",
-    "mpl.rcParams['ps.fonttype'] = 42\n",
+    "mpl.rcParams[\"pdf.fonttype\"] = 42\n",
+    "mpl.rcParams[\"ps.fonttype\"]  = 42\n",
     "\n",
     "# Data definitions\n",
     "x = np.linspace(0, 3, 400)\n",
@@ -67,69 +68,65 @@
     "# Colors\n",
     "orange = \"#E66100\"\n",
     "yellow = \"#FFC100\"\n",
-    "gray = \"#888888\"\n",
-    "blue = \"#3251a8\"\n",
+    "gray   = \"#888888\"\n",
+    "blue   = \"#3251a8\"\n",
     "\n",
-    "fig, axes = plt.subplots(1, 2, figsize=(14, 4), dpi=150)\n",
+    "# Font sizes (match previous figure)\n",
+    "label_fs  = 18\n",
+    "tick_fs   = 16\n",
+    "legend_fs = 16\n",
     "\n",
-    "# Panel (c): Tanh effect illustration with curved arrow\n",
-    "ax = axes[0]\n",
-    "ax.plot(x, y_tanh, color=gray, label='tanh(x)')\n",
-    "ax.plot(x, y_lin, color=blue, label='linear')\n",
+    "fig, ax = plt.subplots(1, 1, figsize=(10, 5))\n",
     "\n",
-    "# Plot before and after segments on tanh curve\n",
-    "x_before = np.linspace(before_span[0], before_span[1], 100)\n",
-    "x_after = np.linspace(after_span[0], after_span[1], 100)\n",
-    "ax.plot(x_before, np.tanh(x_before), color=orange, lw=3, label='Before shift')\n",
-    "ax.plot(x_after, np.tanh(x_after), color=yellow, lw=3, label='After shift')\n",
-    "\n",
-    "# Add curved arrow to indicate shift Δw\n",
-    "start_x, end_x = (before_span[1] + before_span[0]) / 2, (after_span[1] + after_span[0]) / 2\n",
-    "start_y, end_y = np.tanh(start_x), np.tanh(end_x)\n",
-    "ax.annotate('', xy=(end_x, end_y), xytext=(start_x, start_y),\n",
-    "            arrowprops=dict(arrowstyle='->', color=gray, ls='--', lw=2,\n",
-    "                            connectionstyle='arc3,rad=0.3'))\n",
-    "ax.text((start_x+end_x)/2, max(start_y, end_y)+0.05, r'$\\Delta w$ shift',\n",
-    "        color=gray, fontsize='small', ha='center')\n",
-    "\n",
-    "# Styling\n",
-    "ax.set_xlabel('Input')\n",
-    "ax.set_ylabel('Activation')\n",
-    "ax.set_xlim(0.25, 2)\n",
-    "ax.set_ylim(-0.05, 1.1)\n",
-    "ax.grid(color='lightgray', linestyle='--', linewidth=0.5)\n",
-    "ax.legend(frameon=False, fontsize='small', loc='lower right')\n",
-    "ax.text(0.02, 0.95, '(c)', transform=ax.transAxes, weight='bold')\n",
-    "\n",
-    "# Panel (d): Time evolution illustration\n",
-    "ax = axes[1]\n",
     "pre = t < t_event\n",
     "post = ~pre\n",
     "dash = 5\n",
     "n_pre = pre.sum()\n",
     "\n",
     "# Plot A before event in dashed alternating pattern\n",
-    "for i in range(0, n_pre-dash, dash):\n",
-    "    idx = np.arange(i, i+dash)\n",
-    "    ax.plot(t[pre][idx], y_A_time[pre][idx],\n",
-    "            color=orange if (i//dash) % 2 == 0 else yellow, lw=2)\n",
-    "# Plot after event\n",
-    "ax.plot(t[post], y_A_time[post], color=orange, lw=2, label='Neuron A')\n",
-    "ax.plot(t[post], y_B_time[post], color=yellow, lw=2, label='Neuron B')\n",
-    "ax.axvline(t_event, ls='--', color=gray, lw=1.5, label='Event')\n",
+    "for i in range(0, n_pre - dash, dash):\n",
+    "    idx = np.arange(i, i + dash)\n",
+    "    ax.plot(\n",
+    "        t[pre][idx],\n",
+    "        y_A_time[pre][idx],\n",
+    "        color=orange if (i // dash) % 2 == 0 else yellow,\n",
+    "        lw=2,\n",
+    "    )\n",
     "\n",
-    "# Styling\n",
-    "ax.set_xlabel('Time')\n",
+    "# Plot after event\n",
+    "ax.plot(t[post], y_A_time[post], color=orange, lw=2, label=\"Neuron A\")\n",
+    "ax.plot(t[post], y_B_time[post], color=yellow, lw=2, label=\"Neuron B\")\n",
+    "ax.axvline(t_event, ls=\"--\", color=gray, lw=1.5, label=\"Event\")\n",
+    "\n",
+    "# Labels & limits\n",
+    "ax.set_xlabel(\"Time\", fontsize=label_fs)\n",
+    "ax.set_ylabel(\"Activation\", fontsize=label_fs)\n",
     "ax.set_xlim(0, 10)\n",
     "ax.set_ylim(0, 1.05)\n",
-    "ax.grid(color='lightgray', linestyle='--', linewidth=0.5)\n",
-    "ax.legend(frameon=False, fontsize='small', loc='lower right')\n",
-    "ax.text(0.02, 0.95, '(d)', transform=ax.transAxes, weight='bold')\n",
+    "\n",
+    "# Ticks & grid (similar to previous figure)\n",
+    "ax.xaxis.set_major_locator(MultipleLocator(2.0))\n",
+    "ax.xaxis.set_minor_locator(MultipleLocator(1.0))\n",
+    "ax.yaxis.set_major_locator(MultipleLocator(0.2))\n",
+    "ax.yaxis.set_minor_locator(MultipleLocator(0.1))\n",
+    "\n",
+    "ax.grid(which=\"major\", linestyle=\"--\", linewidth=0.6, color=\"#dddddd\")\n",
+    "ax.grid(which=\"minor\", linestyle=\":\",   linewidth=0.4, color=\"#eeeeee\", alpha=0.8)\n",
+    "\n",
+    "# Bigger tick labels\n",
+    "ax.tick_params(axis=\"both\", labelsize=tick_fs)\n",
+    "\n",
+    "# Clean up spines\n",
+    "ax.spines[\"top\"].set_visible(False)\n",
+    "ax.spines[\"right\"].set_visible(False)\n",
+    "\n",
+    "# Legend (larger font, no frame)\n",
+    "ax.legend(frameon=False, fontsize=legend_fs, loc=\"lower right\")\n",
     "\n",
     "plt.tight_layout()\n",
-    "path = \"outputs/figures/hag_effect.pdf\"\n",
-    "fig.savefig(path, bbox_inches='tight')\n",
-    "path"
+    "path = \"outputs/figures/hag_effect_time.pdf\"\n",
+    "fig.savefig(path, bbox_inches=\"tight\")\n",
+    "print(path)"
    ]
   },
   {
@@ -151,7 +148,6 @@
     "# Configure PDF/text rendering\n",
     "mpl.rcParams[\"pdf.fonttype\"] = 42\n",
     "mpl.rcParams[\"ps.fonttype\"]  = 42\n",
-    "mpl.rcParams[\"figure.dpi\"]   = 150\n",
     "\n",
     "# Data\n",
     "x = np.linspace(0, 3, 400)\n",
@@ -182,7 +178,7 @@
     "end_y   = np.tanh(end_x)\n",
     "\n",
     "# Figure\n",
-    "fig, ax = plt.subplots(figsize=(6.8, 4.2))\n",
+    "fig, ax = plt.subplots(figsize=(10, 5))\n",
     "\n",
     "# Base curves (de-emphasized)\n",
     "ax.plot(x, y_tanh, color=gray, lw=2, label=r\"$\\tanh(x)$\")\n",
@@ -209,11 +205,15 @@
     "    arrowprops=dict(arrowstyle=\"<->\", lw=1.8, color=gray)\n",
     ")\n",
     "ax.text(0.5*(start_x+end_x), guide_y+0.04, r\"$\\Delta w$\",\n",
-    "        color=gray, ha=\"center\", va=\"bottom\")\n",
+    "        color=gray, ha=\"center\", va=\"bottom\", fontsize=14)\n",
     "\n",
-    "# Labels & formatting\n",
-    "ax.set_xlabel(\"Input\")\n",
-    "ax.set_ylabel(\"Activation\")\n",
+    "# Labels & formatting  🔼 bigger fonts here\n",
+    "label_fs = 18\n",
+    "tick_fs  = 16\n",
+    "legend_fs = 16\n",
+    "\n",
+    "ax.set_xlabel(\"Input\", fontsize=label_fs)\n",
+    "ax.set_ylabel(\"Activation\", fontsize=label_fs)\n",
     "\n",
     "ax.set_xlim(0, 1.4)\n",
     "ax.set_ylim(0, 1.08)\n",
@@ -226,20 +226,21 @@
     "ax.grid(which=\"major\", linestyle=\"--\", linewidth=0.6, color=\"#dddddd\")\n",
     "ax.grid(which=\"minor\", linestyle=\":\",   linewidth=0.4, color=\"#eeeeee\", alpha=0.8)\n",
     "\n",
+    "# Bigger tick labels\n",
+    "ax.tick_params(axis=\"both\", labelsize=tick_fs)\n",
+    "\n",
     "# Clean up spines\n",
     "ax.spines[\"top\"].set_visible(False)\n",
     "ax.spines[\"right\"].set_visible(False)\n",
     "\n",
-    "# Legend\n",
-    "leg = ax.legend(frameon=False, fontsize=\"small\", loc=\"lower right\", handlelength=3)\n",
+    "# Legend  🔼 bigger font here\n",
+    "leg = ax.legend(frameon=False, fontsize=legend_fs,\n",
+    "                loc=\"lower right\", handlelength=3)\n",
     "\n",
     "plt.tight_layout()\n",
     "out_pdf = \"outputs/figures/hag_effect.pdf\"\n",
-    "out_png = \"outputs/figures/hag_effect.png\"\n",
     "fig.savefig(out_pdf, bbox_inches=\"tight\")\n",
-    "fig.savefig(out_png, dpi=300, bbox_inches=\"tight\")\n",
-    "print(out_pdf)\n",
-    "print(out_png)"
+    "print(out_pdf)"
    ]
   },
   {
@@ -296,12 +297,13 @@
     "from datasets.preprocessing import plot_classes_distribution\n",
     "\n",
     "step_ahead=5\n",
-    "dataset_name = \"MackeyGlass\"\n",
-    "\n",
+    "dataset_name = \"CatsDogs\"\n",
+    " \n",
     "(is_instances_classification, is_multivariate, sampling_rate,\n",
     "     X_train_raw, X_test_raw, Y_train_raw, Y_test,\n",
-    "     use_spectral_representation, spectral_representation,\n",
-    "     groups) = load_dataset(dataset_name, step_ahead, visualize=False)\n",
+    "     use_spectral_representation, groups) = load_dataset(dataset_name, step_ahead, visualize=False)\n",
+    "\n",
+    "spectral_representation = \"mfcc\" if is_instances_classification else \"stft\" # \"mfcc\", \"stft\", \"custom\", \"none\"\n",
     "\n",
     "# Plot data distribution\n",
     "if is_instances_classification:\n",
@@ -365,7 +367,7 @@
     "        X_test, X_train = X_test_raw, X_train_raw\n",
     "        X_val, X_val_band = None, None\n",
     "    Y_train = Y_train_raw\n",
-    "#del Y_train_raw, X_train_raw, X_test_raw"
+    "del Y_train_raw, X_train_raw, X_test_raw"
    ]
   },
   {
@@ -570,12 +572,15 @@
     "    train_band_data = np.concatenate(X_train_band_not_scale, axis=0).T\n",
     "else:\n",
     "    train_band_data = X_train_band_not_scale.T\n",
-    "    \n",
+    "\n",
+    "random_indexes = np.random.randint(0, train_band_data.shape[0], size=3)\n",
+    "\n",
     "ax = axes[1]\n",
     "win_length = 50\n",
     "freqs = librosa.fft_frequencies(sr=sampling_rate, n_fft=win_length)\n",
     "\n",
-    "if use_spectral_representation:\n",
+    "    \n",
+    "if spectral_representation == \"mfcc\":\n",
     "    END = 200\n",
     "    DIFF = END - START\n",
     "    S_db = librosa.amplitude_to_db(train_band_data, ref=np.max)[:,START:END]\n",
@@ -589,6 +594,8 @@
     "        cmap='plasma'\n",
     "    )\n",
     "    \n",
+    "    cbar = fig.colorbar(img, ax=ax, format=\"%+2.0f dB\")\n",
+    "    \n",
     "    # Adjust the yticks to show one out of every two labels\n",
     "    num_freq_bins = S_db.shape[0]\n",
     "    ytick_labels = [f\"{int(freqs[i])}\" if i % 2 == 0 else \"\" for i in range(num_freq_bins)]\n",
@@ -598,9 +605,7 @@
     "\n",
     "    ax.set_xlabel('Steps', fontsize=fontsize)\n",
     "    ax.set_title('Transformed spectral Data', fontsize=fontsize)\n",
-    "    fig.colorbar(img, ax=ax, format=\"%+2.0f dB\")\n",
     "else:\n",
-    "    random_indexes = np.random.randint(0, train_band_data.shape[0], size=3)\n",
     "    for idx, i in enumerate(random_indexes):\n",
     "        ax.plot(range(DIFF), train_band_data[i, START:END],\n",
     "                color=colors_step2[idx % len(colors_step2)], label=f'Feature {i}')\n",
@@ -618,12 +623,10 @@
     "else:\n",
     "    train_band_data = X_train_band.T\n",
     "ax = axes[2]\n",
-    "if 'random_indexes' not in locals():\n",
-    "    random_indexes = np.random.randint(0, train_band_data.shape[0], size=3)\n",
-    "    \n",
+    "\n",
     "for idx, i in enumerate(random_indexes):\n",
-    "    ax.plot(range(DIFF), train_band_data[i, START:END], color=colors_step3[idx % len(colors_step3)],\n",
-    "            label=f'Feature {i}')\n",
+    "    ax.plot(range(DIFF), train_band_data[i, START:END], color=colors_step3[idx % len(colors_step3)], label=f'Feature {i}')\n",
+    "    \n",
     "ax.spines['top'].set_visible(False)\n",
     "ax.spines['right'].set_visible(False)\n",
     "ax.tick_params(axis='both', labelsize=fontsize)\n",
@@ -636,17 +639,45 @@
     "fig.tight_layout()\n",
     "\n",
     "# Draw arrows using ConnectionPatch for better control\n",
-    "def add_arrow(axes_from, axes_to, x_from, x_to):\n",
-    "    con = ConnectionPatch(\n",
-    "        xyA=(x_from, 0.5), xyB=(x_to, 0.5),\n",
-    "        coordsA='axes fraction', coordsB='axes fraction',\n",
-    "        axesA=axes_from, axesB=axes_to,\n",
-    "        arrowstyle=\"-|>\", color=\"k\", shrinkB=5\n",
-    "    )\n",
-    "    axes_from.add_artist(con)\n",
     "\n",
-    "add_arrow(axes[0], axes[1], 0.94, -0.13)\n",
-    "add_arrow(axes[1], axes[2], 1.25, -0.05)\n",
+    "def add_arrow_between(ax_from, ax_to, offset=0.01):\n",
+    "    \"\"\"\n",
+    "    Draw an arrow from ax_from to ax_to in figure coordinates,\n",
+    "    slightly outside their bounding boxes.\n",
+    "    \"\"\"\n",
+    "    fig = ax_from.figure\n",
+    "\n",
+    "    # bounding boxes in figure coordinates [0, 1]\n",
+    "    bbox_from = ax_from.get_position()\n",
+    "    bbox_to   = ax_to.get_position()\n",
+    "\n",
+    "    xA = bbox_from.x1 + offset        # just to the right of ax_from\n",
+    "    xB = bbox_to.x0 - offset          # just to the left of ax_to\n",
+    "    yA = (bbox_from.y0 + bbox_from.y1) / 2\n",
+    "    yB = (bbox_to.y0   + bbox_to.y1)   / 2\n",
+    "\n",
+    "    con = ConnectionPatch(\n",
+    "        xyA=(xA, yA),\n",
+    "        xyB=(xB, yB),\n",
+    "        coordsA=fig.transFigure,\n",
+    "        coordsB=fig.transFigure,\n",
+    "        arrowstyle=\"-|>\",\n",
+    "        linewidth=1.5,\n",
+    "        mutation_scale=18,\n",
+    "        color=\"k\",\n",
+    "        clip_on=False,\n",
+    "    )\n",
+    "    fig.add_artist(con)\n",
+    "\n",
+    "# after fig.tight_layout()\n",
+    "#add_arrow_between(axes[0], axes[1])\n",
+    "#if spectral_representation == \"mfcc\":\n",
+    "#    add_arrow_between(cbar.ax, axes[2])\n",
+    "#else:\n",
+    "#    add_arrow_between(axes[1], axes[2])\n",
+    "\n",
+    "# Save as PDF (vector)\n",
+    "fig.savefig(\"time_series_pipeline.pdf\", format=\"pdf\", bbox_inches=\"tight\")\n",
     "\n",
     "plt.show()"
    ]
@@ -920,11 +951,12 @@
    "outputs": [],
    "source": [
     "from models.reservoir import init_matrices\n",
-    "from connexion_generation.hag import run_algorithm\n",
+    "from hag.hag import run_algorithm\n",
     "from scipy import sparse\n",
     "\n",
     "target_rate = 0.7\n",
     "rate_spread = 0.1\n",
+    "weight_increment = 0.04\n",
     "\n",
     "def initialise_and_run(input_scaling, n, input_connectivity, connectivity, K, bias_scaling, seed, training_set):\n",
     "    \n",
@@ -1133,8 +1165,9 @@
     "if function_name == \"hadsp\":\n",
     "    ax.plot(x, np.ones(len(x))*(target_rate-rate_spread), color=\"red\", linestyle = \"--\")\n",
     "    ax.plot(x, np.ones(len(x))*(target_rate+rate_spread), color=\"red\", linestyle = \"--\")\n",
-    "    ax.text(WATCH_TO, target_rate - rate_spread, r'$\\rho_r - \\beta_r$', color='red', fontsize=fontsize, va='center', ha='left')\n",
-    "    ax.text(WATCH_TO, target_rate + rate_spread, r'$\\rho_r + \\beta_r$', color='red', fontsize=fontsize, va='center', ha='left')\n",
+    "    x_max = x[-1]\n",
+    "    ax.text(x_max, target_rate - rate_spread, r'$\\rho_r - \\beta_r$', color='red', fontsize=fontsize, va='center', ha='left')\n",
+    "    ax.text(x_max, target_rate + rate_spread, r'$\\rho_r + \\beta_r$', color='red', fontsize=fontsize, va='center', ha='left')\n",
     "\n",
     "# target_rate, rate_spread\n",
     "fontsize=18\n",
@@ -1143,7 +1176,11 @@
     "ax.tick_params(axis='both', labelsize=fontsize)\n",
     "plt.xlabel('Time', size=fontsize)\n",
     "plt.ylabel('Neuron Activity', size=fontsize)\n",
-    "plt.legend(title=\"Neurons :\",fontsize=fontsize, title_fontsize=fontsize)"
+    "plt.legend(title=\"Neurons :\",fontsize=fontsize, title_fontsize=fontsize)\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "fig.savefig(\"neuron_activity.pdf\", format=\"pdf\", bbox_inches=\"tight\")\n",
+    "plt.show()"
    ]
   },
   {
