--- a/2.test_analysis.ipynb
+++ b/2.test_analysis.ipynb
@@ -719,7 +719,7 @@
    "outputs": [],
    "source": [
     "outfile = \"outputs/input_strategy.csv\"\n",
-    "img_dir = \"outputs/images\"\n",
+    "img_dir = \"outputs/figures\"\n",
     "os.makedirs(os.path.dirname(outfile), exist_ok=True)\n",
     "os.makedirs(img_dir, exist_ok=True)\n"
    ]
@@ -874,7 +874,7 @@
     "from matplotlib.patches import Patch\n",
     "\n",
     "outfile = \"outputs/input_strategy.csv\"\n",
-    "img_dir = \"outputs/images\"\n",
+    "img_dir = \"outputs/figures\"\n",
     "os.makedirs(img_dir, exist_ok=True)\n",
     "\n",
     "# ---- load & clean ----\n",
@@ -2957,19 +2957,17 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import matplotlib as mpl\n",
-    "import matplotlib.pyplot as plt\n",
-    "from matplotlib.lines import Line2D\n",
     "import pandas as pd\n",
     "import xml.etree.ElementTree as ET\n",
     "from svgpath2mpl import parse_path\n",
-    "from matplotlib.markers import MarkerStyle\n",
     "\n",
-    "# ---------- vector-friendly text (keep text as text in PDF/SVG) ----------\n",
-    "mpl.rcParams['pdf.fonttype'] = 42      # embed TrueType\n",
-    "mpl.rcParams['ps.fonttype']  = 42\n",
-    "mpl.rcParams['svg.fonttype'] = 'none'  # keep text as text\n",
-    "mpl.rcParams['font.family']  = ['Arial', 'DejaVu Sans']  # Arial if available\n",
+    "import matplotlib as mpl\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib.lines import Line2D\n",
+    "from matplotlib.path import Path\n",
+    "from matplotlib.font_manager import FontProperties\n",
+    "from matplotlib.textpath import TextPath\n",
+    "from matplotlib.markers import MarkerStyle\n",
     "\n",
     "def make_colorable_marker(svg_path, scale=1.0):\n",
     "    tree = ET.parse(svg_path)\n",
@@ -2978,10 +2976,28 @@
     "    d_list = [p.attrib[\"d\"] for p in root.findall(\".//svg:path\", ns)]\n",
     "    full_d = \" \".join(d_list)\n",
     "    p = parse_path(full_d)\n",
+    "    # flip y, center, scale\n",
     "    p.vertices[:, 1] *= -1\n",
     "    p.vertices -= p.vertices.mean(axis=0)\n",
     "    p.vertices *= scale\n",
     "    return MarkerStyle(p)\n",
+    "\n",
+    "def make_text_marker(char, family=\"DejaVu Sans\", scale=1.0):\n",
+    "    \"\"\"Create a centered, scalable marker from a single glyph.\"\"\"\n",
+    "    fp = FontProperties(family=family)\n",
+    "    tp = TextPath((0, 0), char, prop=fp, size=1.0)\n",
+    "    verts = tp.vertices.copy()\n",
+    "    verts -= verts.mean(axis=0)   # center glyph (removes baseline offset)\n",
+    "    verts *= scale\n",
+    "    path = Path(verts, tp.codes)\n",
+    "    return MarkerStyle(path)\n",
+    "\n",
+    "# ---------- vector-friendly text (keep text as text in PDF/SVG) ----------\n",
+    "mpl.rcParams['pdf.fonttype'] = 42      # embed TrueType\n",
+    "mpl.rcParams['ps.fonttype']  = 42\n",
+    "mpl.rcParams['svg.fonttype'] = 'none'  # keep text as text\n",
+    "mpl.rcParams['font.family']  = ['Arial', 'DejaVu Sans']  # Arial if available\n",
+    "\n",
     "\n",
     "file_name = \"outputs/metrics.csv\"\n",
     "performance_file = \"outputs/test_results/test_results_classification.csv\"\n",
@@ -3011,10 +3027,10 @@
     "\n",
     "\n",
     "dataset_marker = {\n",
-    "    \"CatsDogs\":               r\"$🐱$\",\n",
-    "    \"Japanese\\nVowels\":       r\"$¥$\",\n",
-    "    \"Spoken\\nArabic\\nDigits\": arabic_marker,\n",
-    "    \"FSDD\":                   r\"$5$\",\n",
+    "    \"CatsDogs\":               make_text_marker(\"🐱\", family=\"DejaVu Sans\", scale=0.020),\n",
+    "    \"Japanese\\nVowels\":       make_text_marker(\"¥\",   family=\"DejaVu Sans\", scale=0.020),\n",
+    "    \"Spoken\\nArabic\\nDigits\": make_text_marker(\"ب\",   family=\"Geeza Pro\",   scale=0.020),\n",
+    "    \"FSDD\":                   make_text_marker(\"5\",   family=\"DejaVu Sans\", scale=0.020),\n",
     "    \"SPEECH\\nCOMMANDS\":       make_colorable_marker(\"analysis/icons/microphone.svg\", scale=0.015),\n",
     "}\n",
     "\n",
